tests/baselines/reference/propertyOverridesAccessors3.errors.txt
propertyOverridesAccessors3.ts(19,5): error TS2610: 'sound' is defined as an accessor in class 'Animal', but is overridden here in 'Lion' as an instance property.


==== propertyOverridesAccessors3.ts (1 errors) ====
    class Animal {
        _sound = 'rustling noise in the bushes'
    
        get sound() { return this._sound }
        set sound(val) {
          this._sound = val;
          /* some important code here, perhaps tracking known sounds, etc */
        }
    
        makeSound() {
            console.log(this._sound)
        }
    }
    
    const a = new Animal
    a.makeSound() // 'rustling noise in the bushes'
    
    class Lion extends Animal {
        sound = 'RAWR!' // error here
        ~~~~~
!!! error TS2610: 'sound' is defined as an accessor in class 'Animal', but is overridden here in 'Lion' as an instance property.
    }
    
    const lion = new Lion
    lion.makeSound() // with [[Define]]: Expected "RAWR!" but got "rustling noise in the bushes"
    